--- a/src/partials/feedback.html
+++ b/src/partials/feedback.html
@@ -74,15 +74,15 @@
       </div>
     </div>
     <div class="feedback-svg-list">
-      <span class="dot feedback-svg-list__item" onclick="currentSlide(1)"
+      <span class="dot feedback-svg-list__item"
         ><svg width="12" height="12">
           <use href="./images/icons/sprite.svg#icon-home"></use></svg
       ></span>
-      <span class="dot feedback-svg-list__item" onclick="currentSlide(2)"
+      <span class="dot feedback-svg-list__item"
         ><svg width="12" height="12">
           <use href="./images/icons/sprite.svg#icon-circle-gray"></use></svg
       ></span>
-      <span class="dot feedback-svg-list__item" onclick="currentSlide(3)"
+      <span class="dot feedback-svg-list__item"
         ><svg width="12" height="12">
           <use href="./images/icons/sprite.svg#icon-circle-gray"></use></svg
       ></span>
