--- a/src/partials/feedback.html
+++ b/src/partials/feedback.html
@@ -73,16 +73,16 @@
         <p class="feedback-person">Olena, Miami</p>
       </div>
     </div>
-    <div class="feedback-svg-list">
-      <span class="dot feedback-svg-list__item"
+    <div class="feedback-svg-list" feedback-svg-list>
+      <span class="feedback-svg-list__item"
         ><svg width="12" height="12">
           <use href="./images/icons/sprite.svg#icon-home"></use></svg
       ></span>
-      <span class="dot feedback-svg-list__item"
+      <span class="feedback-svg-list__item"
         ><svg width="12" height="12">
           <use href="./images/icons/sprite.svg#icon-circle-gray"></use></svg
       ></span>
-      <span class="dot feedback-svg-list__item"
+      <span class="feedback-svg-list__item"
         ><svg width="12" height="12">
           <use href="./images/icons/sprite.svg#icon-circle-gray"></use></svg
       ></span>
