--- a/src/partials/feedback.html
+++ b/src/partials/feedback.html
@@ -73,7 +73,7 @@
         <p class="feedback-person">Olena, Miami</p>
       </div>
     </div>
-    <div class="feedback-svg-list" feedback-svg-list>
+    <!-- <div class="feedback-svg-list" feedback-svg-list>
       <span class="feedback-svg-list__item"
         ><svg width="12" height="12">
           <use href="./images/icons/sprite.svg#icon-home"></use></svg
@@ -86,6 +86,6 @@
         ><svg width="12" height="12">
           <use href="./images/icons/sprite.svg#icon-circle-gray"></use></svg
       ></span>
-    </div>
+    </div> -->
   </div>
 </section>
