--- a/src/sass/components/feedback.scss
+++ b/src/sass/components/feedback.scss
@@ -11,21 +11,16 @@
     padding-bottom: 235px;
   }
 }
-.feedback__list {
-  background: black;
-}
 .feedback-list__item {
   margin: 0 auto;
   @include for-size(tablet) {
+    margin: 0 1000px;
     max-width: 620px;
   }
   @include for-size(desktop) {
     max-width: 925px;
   }
 }
-// .slick-active {
-//   margin: 0 auto;
-// }
 .feedback__photo {
   margin: 0 auto;
   margin-bottom: 30px;
@@ -53,15 +48,6 @@
     margin-bottom: 15px;
     padding: 50px 90px 40px;
     background-position: 50px 30px;
-  }
-  &:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100%;
-    height: 4px;
-    background-color: aqua;
   }
 }
 .feedback-list__item:not(:first-child) {
