--- a/src/sass/components/feedback.scss
+++ b/src/sass/components/feedback.scss
@@ -49,6 +49,7 @@
     padding: 50px 90px 40px;
     background-position: 50px 30px;
   }
+}
 .feedback-text__content {
   background-image: linear-gradient(
     180deg,
