add changes after validator

--- a/src/sass/utils/variables.scss
+++ b/src/sass/utils/variables.scss
@@ -30,6 +30,8 @@ $icons: #fea5bb;
 // feedback
 $feedback: #fafafa;
 $dots: #d9d9d9;
+$lines: #e1e1e1;
+$linegray: rgba(250, 250, 250, 0);
 
 // functions
 // тайминг для transition
