--- a/src/sass/components/feedback.scss
+++ b/src/sass/components/feedback.scss
@@ -53,13 +53,13 @@
 .feedback-text__content {
   background-image: linear-gradient(
     180deg,
-    rgba(250, 250, 250, 0) 48.39%,
-    #e1e1e1 48.39%,
-    #e1e1e1 50%,
-    rgba(250, 250, 250, 0) 50%,
-    rgba(250, 250, 250, 0) 98.39%,
-    #e1e1e1 98.39%,
-    #e1e1e1 100%
+    $linegray 48.39%,
+    $lines 48.39%,
+    $lines 50%,
+    $linegray 50%,
+    $linegray 98.39%,
+    $lines 98.39%,
+    $lines 100%
   );
   background-size: 60px 60px;
 }
