--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="container header__container">
     <div class="header__flexbox">
-      <a href="#" class="logo" id="home"
+      <a href="" class="logo" id="home"
         ><img src="./images/general/logo.png" alt="logo" />
       </a>
       <div class="nav">
