Добавил анимацию + ссылки в копирайте

--- a/src/partials/copyright.html
+++ b/src/partials/copyright.html
@@ -9,14 +9,14 @@
         <span class="copyright__line copyright__line--block"
           >Made with passion:
         </span>
-        <span class="copyright__line">Maksym Yaryhin </span>
-        <span class="copyright__line"> Iliya Miroshnichenko </span>
-        <span class="copyright__line"> Anton San </span>
-        <span class="copyright__line"> Snizhana Mykhaylova </span>
-        <span class="copyright__line"> Sergey Mikhailyuk </span>
-        <span class="copyright__line"> Vitalii Latka </span>
-        <span class="copyright__line"> Iryna Chyryk </span>
-        <span class="copyright__line"> Iryna Zotovych</span>
+      <a href="https://github.com/myaryhin0201" class="copyright__line" target="_blank">Maksym Yaryhin,</a>
+      <a href="https://github.com/iliyamiroshnichenko" class="copyright__line" target="_blank">Iliya Miroshnichenko,</a>
+      <a href="https://github.com/AntonSann" class="copyright__line" target="_blank">Anton San,</a>
+      <a href="https://github.com/Snizhana-Mykhaylova" class="copyright__line" target="_blank">Snizhana Mykhaylova,</a>
+      <a href="https://github.com/SergeyMikhailuk" class="copyright__line" target="_blank">Sergey Mikhailyuk,</a>
+      <a href="https://github.com/vitaliilatka" class="copyright__line" target="_blank">Vitalii Latka,</a>
+      <a href="https://github.com/ichyryk" class="copyright__line" target="_blank">Iryna Chyryk,</a>
+      <a href="https://github.com/KapirkaZ" class="copyright__line" target="_blank">Iryna Zotovych</a>       
       </div>
     </div>
   </div>
