--- a/src/sass/components/copyright.scss
+++ b/src/sass/components/copyright.scss
@@ -12,6 +12,7 @@
 }
 .copyright__line {
   display: block;
+  color: $second-text-color;
   @include for-size(tablet) {
     display: inline-block;
   }
