--- a/src/sass/components/products.scss
+++ b/src/sass/components/products.scss
@@ -76,8 +76,14 @@
   margin-bottom: 130px;
   padding: 40px 40px;
   padding-top: 160px;
+  transition: transform 250ms $timing, box-shadow 250ms $timing;
   &:last-child {
     margin-bottom: 0;
+  }
+
+  &:hover {
+    transform: scale(1.05);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
 
   &--ice-cream {
