Добавляет правки в секции products i howitsmade

--- a/src/sass/components/products.scss
+++ b/src/sass/components/products.scss
@@ -18,7 +18,7 @@
     padding: 0px 34px;
   }
   @include for-size(desktop) {
-    padding: 0px 74px;
+    padding: 0px 117px;
   }
 }
 
@@ -26,41 +26,39 @@
   margin-bottom: 15px;
 
   font-family: Titan One;
-  @include font(18px, 400, $second-color, 116%);
-  font-size: 18px;
-  line-height: 21px;
+  @include font(18px, 400, $second-color, 1.16);
 
   text-align: center;
   text-transform: uppercase;
 
   @include for-size(tablet) {
-    @include font(26px, 400, $second-color, 116%);
+    @include font(26px, 400, $second-color, 1.16);
   }
 
   @include for-size(desktop) {
-    @include font(30px, 400, $second-color, 114%);
+    @include font(30px, 400, $second-color, 1.14);
   }
 }
 
 .products__title {
-  margin-bottom: 140px;
+  margin-bottom: 144px;
 
   font-family: Titan One;
-  @include font(34px, 400, $main-color, 115%);
+  @include font(34px, 400, $main-color, 1.15);
 
   text-align: center;
   letter-spacing: 0.04em;
   text-transform: uppercase;
 
   @include for-size(tablet) {
-    @include font(48px, 400, $main-color, 115%);
-    margin-bottom: 160px;
+    @include font(48px, 400, $main-color, 1.15);
+    margin-bottom: 150px;
   }
 
   @include for-size(desktop) {
-    @include font(58px, 400, $main-color, 114%);
+    @include font(58px, 400, $main-color, 1.15);
     letter-spacing: 0.06em;
-    margin-bottom: 240px;
+    margin-bottom: 260px;
   }
 }
 
@@ -111,13 +109,10 @@
 
 .products__item-pic {
   position: absolute;
-  /* margin: auto; */
   top: 0;
   left: 50%;
   margin-right: -50%;
   transform: translate(-50%, -45%);
-  /*   display: flex;
-  justify-content: center; */
 
   @include for-size(tablet) {
     transform: translate(-50%, -45%);
@@ -131,34 +126,42 @@
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
+
+  @include for-size(desktop) {
+    margin-bottom: 32px;
+  }
 }
 
 .products__item-title {
   margin-bottom: 30px;
 
   font-family: Titan One;
-  @include font(20px, 400, $white-color, 115%);
+  @include font(20px, 400, $white-color, 1.15);
   text-align: center;
   letter-spacing: 0.04em;
   text-transform: uppercase;
 
   @include for-size(desktop) {
-    @include font(30px, 400, $white-color, 114%);
+    margin-bottom: 32px;
+    @include font(30px, 400, $white-color, 1.13);
   }
 }
+
 .products__item-text {
   margin-bottom: 30px;
 
-  @include font(14px, 700, $white-color, 152%);
+  @include font(14px, 700, $white-color, 1.52);
   text-align: center;
   letter-spacing: 0.04em;
 
   @include for-size(tablet) {
-    @include font(14px, 700, $white-color, 176%);
+    margin-bottom: 40px;
+    @include font(14px, 700, $white-color, 1.76);
   }
 
   @include for-size(desktop) {
-    @include font(16px, 700, $white-color, 176%);
+    margin-bottom: 62px;
+    @include font(16px, 700, $white-color, 1.76);
   }
 }
 
