--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -11,16 +11,18 @@
     padding-bottom: 90px;
   }
   @include for-size(desktop) {
-    padding: 0 120px;
+    padding: 0 95px;
     padding-bottom: 100px;
   }
 }
 .footer__consist {
   font-family: 'Titan One';
-  margin-bottom: 45px;
-  max-width: 230px;
+  margin-bottom: 43px;
   text-transform: uppercase;
   letter-spacing: 0.04em;
+  @include for-size(mobile-tablet) {
+    padding-right: 46px;
+  }
   @include for-size(tablet) {
     margin-bottom: 0;
     max-width: 340px;
@@ -30,6 +32,7 @@
     max-width: 100%;
   }
 }
+
 .footer__consist__made {
   margin-bottom: 15px;
   @include font(18px, 400, $second-color, 1.17);
@@ -43,39 +46,58 @@
   }
 }
 .footer__consist__with {
-  font-size: 34px;
-  line-height: 1.15;
-  color: $main-color;
-  @include for-size(tablet) {
-    font-size: 48px;
-    line-height: 1.15;
+  @include font(43px, 400, $main-color, 1.15);
+
+  @include for-size(tablet-only) {
+    @include font(48px, 400, $main-color, 1.15);
+    letter-spacing: 0.06em;
+  }
+
+  @include for-size(desktop) {
+    @include font(58px, 400, $main-color, 1.14);
     letter-spacing: 0.06em;
   }
 }
+
 .footer__info {
   text-align: right;
 }
+
 .footer__contacts {
   font-family: 'DM Sans';
   text-align: right;
   @include font(12px, 700, $main-color, 1.83);
-  @include for-size(tablet) {
-    font-size: 14px;
+
+  @include for-size(tablet-only) {
+    @include font(14px, 700, $main-color, 1.86);
+  }
+
+  @include for-size(desktop) {
+    @include font(16px, 700, $main-color, 1.86);
   }
 }
+
 .footer__contacts__text {
   color: $text-color;
 }
+
 .footer__contacts__link {
   color: $main-color;
 }
+
 .social-icons {
   @include flex($justcont: flex-end);
-  margin-bottom: 45px;
+  margin-bottom: 46px;
+
+  @include for-size(desktop) {
+    margin-bottom: 50px;
+  }
 }
+
 .social-icons__item:not(:last-child) {
   margin-right: 30px;
 }
+
 .social-icons__link {
   @include flex();
   @include trans(border-radius, 50%);
