--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -23,7 +23,7 @@
           <li class="social-icons__item">
             <a
               class="social-icons__link"
-              href="https://www.telegram.com/"
+              href="https://www.telegram.org/"
               target="_blank"
               rel="noopener noreferrer"
               aria-label="ссылка Telegram"
