--- a/src/partials/howitsmade.html
+++ b/src/partials/howitsmade.html
@@ -88,30 +88,32 @@
 
   <div class="gallery">
     <div class="container">
-      <picture class="gallery__image">
-        <source
-          srcset="
-            ./images/mobile/gallery/gallery.jpg    1x,
-            ./images/mobile/gallery/gallery@2x.jpg 2x
-          "
-          media="(max-width: 767px)"
-        />
-        <source
-          srcset="
-            ./images/tablet/gallery/gallery.jpg    1x,
-            ./images/tablet/gallery/gallery@2x.jpg 2x
-          "
-          media="(max-width: 1199px)"
-        />
-        <source
-          srcset="
-            ./images/desktop/gallery/gallery.jpg    1x,
-            ./images/desktop/gallery/gallery@2x.jpg 2x
-          "
-          media="(min-width: 1200px)"
-        />
-        <img src="./images/mobile/gallery/gallery.jpg" alt="photo gallery" />
-      </picture>
+      <div class="gallery__image">
+        <picture>
+          <source
+            srcset="
+              ./images/mobile/gallery/gallery.jpg    1x,
+              ./images/mobile/gallery/gallery@2x.jpg 2x
+            "
+            media="(max-width: 767px)"
+          />
+          <source
+            srcset="
+              ./images/tablet/gallery/gallery.jpg    1x,
+              ./images/tablet/gallery/gallery@2x.jpg 2x
+            "
+            media="(max-width: 1199px)"
+          />
+          <source
+            srcset="
+              ./images/desktop/gallery/gallery.jpg    1x,
+              ./images/desktop/gallery/gallery@2x.jpg 2x
+            "
+            media="(min-width: 1200px)"
+          />
+          <img src="./images/mobile/gallery/gallery.jpg" alt="photo gallery" />
+        </picture>
+      </div>
     </div>
   </div>
 </section>
