--- a/src/sass/components/container.scss
+++ b/src/sass/components/container.scss
@@ -6,7 +6,7 @@
   margin-right: auto;
   margin-left: auto;
   @include for-size(mobile) {
-    width: 320px;
+    min-width: 320px;
   }
   @include for-size(tablet) {
     width: 768px;
