--- a/src/sass/components/howitsmade.scss
+++ b/src/sass/components/howitsmade.scss
@@ -14,10 +14,8 @@
       screen and (-o-min-device-pixel-ratio: 2/1),
       screen and (min-resolution: 192dpi),
       screen and (min-resolution: 2dppx) {
-      
-        background-image: url('../images/desktop/howitsmade/sectionbg@2x.png');
-      }
-
+      background-image: url('../images/desktop/howitsmade/sectionbg@2x.png');
+    }
   }
 
   @include for-size(tablet-only) {
@@ -37,9 +35,8 @@
       screen and (-o-min-device-pixel-ratio: 2/1),
       screen and (min-resolution: 192dpi),
       screen and (min-resolution: 2dppx) {
-      
-        background-image: url('../images/desktop/howitsmade/sectionbg@2x.png');
-      }
+      background-image: url('../images/desktop/howitsmade/sectionbg@2x.png');
+    }
   }
 }
 
@@ -52,7 +49,6 @@
 
   @include for-size(mobile-tablet) {
     @include font(18px, 400, $second-color, 1.17);
-  
   }
   @include for-size(tablet-only) {
     @include font(26px, 400, $second-color, 1.15);
@@ -60,7 +56,6 @@
 
   @include for-size(desktop) {
     @include font(30px, 400, $second-color, 1.13);
-
   }
 }
 
@@ -84,7 +79,7 @@
   @include for-size(mobile-tablet) {
     padding-right: 50px;
   }
-  
+
   @include for-size(tablet-only) {
     display: flex;
     padding-left: 16px;
@@ -198,7 +193,7 @@
 }
 
 .howitsmade__item::before {
-  content: " ";
+  content: ' ';
   margin-bottom: 16px;
   height: 50px;
   display: block;
@@ -254,12 +249,21 @@
 .gallery {
   position: relative;
   top: 64px;
- 
+
   @include for-size(tablet) {
     top: 150px;
   }
 
   @include for-size(desktop) {
     top: 250px;
+  }
+}
+
+.gallery__image {
+  @include for-size(mobile) {
+    position: relative;
+    width: 320px;
+    left: 50%;
+    transform: translateX(-50%);
   }
 }
