add some changes

--- a/src/partials/howitsmade.html
+++ b/src/partials/howitsmade.html
@@ -7,7 +7,7 @@
 
     <div class="article">
       <div class="article__img">
-        <picture>
+        <picture class="article__img--center">
           <source
             srcset="
               ./images/desktop/howitsmade/cow516.png     1x,
