--- a/src/sass/components/contacts.scss
+++ b/src/sass/components/contacts.scss
@@ -76,6 +76,10 @@
       margin-right: 31px;
     }
   }
+  @media screen and (min-width: 450px) and (max-width: 767px) {
+    display: flex;
+    justify-content: center;
+  }
 }
 
 .contacts__item {
@@ -86,7 +90,10 @@
   @include for-size(mobile-tablet) {
     padding: 43px 20px;
   }
-
+  @media screen and (min-width: 450px) and (max-width: 767px) {
+    text-align: center;
+    max-width: 350px;
+  }
   @include for-size(tablet-only) {
     max-width: 220px;
     padding: 50px 31px;
@@ -95,6 +102,9 @@
   @include for-size(desktop) {
     max-width: 330px;
     padding: 51px 44px 62px 43px;
+  }
+  @media screen and (min-width: 450px) and (max-width: 767px) {
+    padding: 43px 45px 60px;
   }
 }
 
