--- a/src/sass/components/products.scss
+++ b/src/sass/components/products.scss
@@ -63,6 +63,11 @@
 }
 
 .products__list {
+  @media screen and (min-width: 450px) and (max-width: 767px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   @include for-size(tablet) {
     display: flex;
   }
@@ -94,7 +99,10 @@
   &--milkshake {
     background: $milkshake;
   }
-
+  @media screen and (min-width: 450px) and (max-width: 767px) {
+    padding-bottom: 100px;
+    max-width: 450px;
+  }
   @include for-size(tablet) {
     margin-right: 20px;
     margin-bottom: 0;
@@ -161,6 +169,10 @@
   text-align: center;
   letter-spacing: 0.04em;
 
+  @media screen and (min-width: 450px) and (max-width: 767px) {
+    max-width: 270px;
+    margin-bottom: 80px;
+  }
   @include for-size(tablet) {
     margin-bottom: 40px;
     @include font(14px, 700, $white-color, 1.76);
