--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -60,7 +60,7 @@
     </div>
     <section class="hero">
       <div class="hero-flex">
-        <div>
+        <div сlass="hero__ice">
           <span class="hero__desc section__desc">
             ice cream<br />
             made with
